[tool.poetry]
name = "qurido"
version = "0.1.0"
description = ""
authors = ["JinWooHyun <jwhyun2215@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.22"
httpx = "^0.24.0"
supabase = "^2.0.3"


[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
